portfolio inner pages links & slider

--- a/src/app/anansipalaceforkids/anansipalaceforkids.component.html
+++ b/src/app/anansipalaceforkids/anansipalaceforkids.component.html
@@ -181,8 +181,8 @@
             </div>
             <div class="case-slider-body">
                 <ngx-slick-carousel  class="case-slider-wrapper" #slickModal="slick-carousel" [config]="caseslider">
-                    <a routerLink="/luxandnyx" class="case-items" ngxSlickItem>
-                        <div class="card-h-txt">
+                    <a routerLink="/our-work/luxandnyx" class="case-items" ngxSlickItem>
+                        <div class="card-h-txt desktop">
                             <img class="logo_card" src="../../assets/image/luxandnyx_logo-h.webp" width="100%" alt="">
                             <div class="bottom_card">
                             <h4 class="card-heading">luxandnyx</h4>
@@ -190,9 +190,15 @@
                             </div>
                         </div>
                         <img src="../../assets/image/portfolio/case/case-2.webp" width="100%" alt="case-1">
+                        <div class="card-h-txt mobile">
+                            <div class="bottom_card">
+                            <h4 class="card-heading">luxandnyx</h4>
+                            <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
                     </a>   
-                    <a routerLink="/m-h-c" class="case-items" ngxSlickItem>
-                        <div class="card-h-txt">
+                    <a routerLink="/our-work/m-h-c" class="case-items" ngxSlickItem>
+                        <div class="card-h-txt desktop">
                             <svg class="header__nav--logo hidden 680:block " width="90" height="29" viewBox="0 0 90 29" fill="none"><path d="M0.000145702 3.13231C-0.00302746 2.72008 0.0738991 2.31131 0.226446 1.92983C0.378992 1.54834 0.60411 1.20176 0.88869 0.910255C1.17327 0.618753 1.51162 0.388159 1.88405 0.231901C2.25648 0.0756441 2.65553 -0.00315375 3.05797 9.66082e-05H3.73308C5.04358 9.66082e-05 5.95695 0.691624 6.51292 1.62722L13.8994 13.9572L21.3255 1.59106C21.9609 0.533432 22.8346 0.00461641 24.0612 0.00461641H24.7363C25.1388 0.000770767 25.538 0.0789784 25.9106 0.234685C26.2832 0.390392 26.6219 0.620486 26.9069 0.911568C27.1919 1.20265 27.4175 1.5489 27.5706 1.93016C27.7237 2.31142 27.8012 2.72007 27.7986 3.13231V25.7493C27.8018 26.1616 27.7248 26.5703 27.5723 26.9518C27.4197 27.3333 27.1946 27.6799 26.91 27.9714C26.6255 28.2629 26.2871 28.4935 25.9147 28.6497C25.5423 28.806 25.1432 28.8848 24.7408 28.8815C23.0729 28.8815 21.7226 27.4578 21.7226 25.7493V11.5572L16.3615 20.0137C15.7261 20.99 14.9319 21.6002 13.8199 21.6002C12.708 21.6002 11.9138 20.99 11.2784 20.0137L6.00108 11.6747V25.8307C6.00052 26.2346 5.92179 26.6344 5.76942 27.0069C5.61706 27.3795 5.39409 27.7174 5.11342 28.0011C4.83275 28.2848 4.49995 28.5087 4.13426 28.6598C3.76857 28.811 3.37726 28.8863 2.98296 28.8815C2.59038 28.8861 2.20086 28.8104 1.83723 28.6587C1.4736 28.5071 1.14319 28.2826 0.865369 27.9985C0.587549 27.7143 0.367912 27.3762 0.219338 27.004C0.0707641 26.6317 -0.00375663 26.2328 0.000145702 25.8307V3.13231Z" fill="#ffffff"></path><path d="M35.019 3.12296C35.019 2.2947 35.3406 1.50036 35.913 0.914694C36.4854 0.329025 37.2618 0 38.0713 0C38.8808 0 39.6571 0.329025 40.2295 0.914694C40.8019 1.50036 41.1235 2.2947 41.1235 3.12296V11.4779H52.381V3.12296C52.381 2.2947 52.7026 1.50036 53.275 0.914694C53.8474 0.329025 54.6237 0 55.4332 0C56.2427 0 57.0191 0.329025 57.5915 0.914694C58.1639 1.50036 58.4855 2.2947 58.4855 3.12296V25.7543C58.4855 26.5825 58.1639 27.3769 57.5915 27.9626C57.0191 28.5482 56.2427 28.8772 55.4332 28.8772C54.6237 28.8772 53.8474 28.5482 53.275 27.9626C52.7026 27.3769 52.381 26.5825 52.381 25.7543V17.2416H41.1235V25.7588C41.1235 26.587 40.8019 27.3814 40.2295 27.9671C39.6571 28.5527 38.8808 28.8817 38.0713 28.8817C37.2618 28.8817 36.4854 28.5527 35.913 27.9671C35.3406 27.3814 35.019 26.587 35.019 25.7588V3.12296Z" fill="#ffffff"></path><path d="M65.345 14.4422V14.3628C65.345 6.46725 71.2964 0 79.826 0C83.992 0 86.809 1.11094 89.1102 2.82143C89.4806 3.1069 89.7805 3.47355 89.9868 3.89314C90.1932 4.31274 90.3005 4.7741 90.3005 5.24169C90.3 5.63566 90.2213 6.02561 90.0691 6.38899C89.9169 6.75236 89.6941 7.08195 89.4137 7.35867C89.1333 7.6354 88.8007 7.85379 88.4354 8.00119C88.07 8.14859 87.6791 8.22208 87.2851 8.21742C86.4519 8.21742 85.8965 7.90001 85.46 7.62227C83.7539 6.35263 81.9685 5.63845 79.7863 5.63845C75.1045 5.63845 71.7329 9.52674 71.7329 14.2879V14.3673C71.7329 19.1284 75.026 23.0961 79.7863 23.0961C82.3653 23.0961 84.0713 22.3025 85.8171 20.9139C86.3278 20.4824 86.9737 20.2438 87.6422 20.2394C89.1896 20.2394 90.4989 21.509 90.4989 23.0564C90.4954 23.4732 90.4013 23.8842 90.2232 24.261C90.0451 24.6378 89.7872 24.9714 89.4673 25.2386C86.9677 27.4208 84.0317 28.7301 79.5923 28.7301C71.4155 28.7257 65.345 22.4172 65.345 14.4422Z" fill="#ffffff"></path><path d="M90.9027 22.8773C90.9032 22.2403 90.706 21.6189 90.3382 21.0988C89.9704 20.5787 89.4502 20.1856 88.8495 19.9738C88.2487 19.762 87.5971 19.7419 86.9844 19.9162C86.3717 20.0906 85.8283 20.4509 85.4292 20.9473C85.1073 21.2638 83.4462 22.7107 79.9626 22.7107C76.0929 22.7107 74.3127 20.8044 74.2387 20.7233C74.2669 20.7551 74.2801 20.7718 74.2801 20.7718C73.7446 20.1848 73.0034 19.827 72.2107 19.7728C71.418 19.7186 70.635 19.9723 70.0246 20.481C69.4142 20.9896 69.0236 21.7141 68.934 22.5036C68.8444 23.2931 69.0628 24.0867 69.5436 24.7192C69.556 24.7342 69.5736 24.7553 69.5948 24.7791C69.7233 24.9434 69.8681 25.0943 70.0268 25.2297C70.7232 25.8925 71.4981 26.4675 72.3342 26.9419C74.5384 28.2089 77.1738 28.8817 79.967 28.8817C82.7603 28.8817 85.356 28.2407 87.4915 27.0301C89.1896 26.0655 90.0713 25.0357 90.2309 24.84L90.2124 24.8241C90.6609 24.2746 90.9049 23.5866 90.9027 22.8773Z" fill="#FF5733"></path></svg>
                             <div class="bottom_card">
                             <h4 class="card-heading">Men's health clinic</h4>
@@ -200,9 +206,15 @@
                             </div>
                         </div>
                         <img src="../../assets/image/portfolio/case/case-1.webp" width="100%" alt="case-1"> 
+                        <div class="card-h-txt mobile">
+                            <div class="bottom_card">
+                                <h4 class="card-heading">Men's health clinic</h4>
+                                <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
                     </a>
-                    <!-- <a routerLink="/anansi-palace" class="case-items" ngxSlickItem>
-                        <div class="card-h-txt">
+                    <!-- <a routerLink="/our-work/anansi-palace" class="case-items" ngxSlickItem>
+                        <div class="card-h-txt desktop">
                             <h3 class="logo_card">Anansipalaceforkid</h3>
                             <div class="bottom_card">
                             <h4 class="card-heading">Anansipalaceforkids</h4>
@@ -210,9 +222,15 @@
                             </div>
                         </div>
                         <img src="../../assets/image/portfolio/case/case-3.webp" width="100%" alt="case-1">
+                        <div class="card-h-txt mobile">
+                            <div class="bottom_card">
+                                <h4 class="card-heading">Anansipalaceforkids</h4>
+                            <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
                     </a>  -->
-                    <a routerLink="/paris-select" class="case-items" ngxSlickItem>
-                        <div class="card-h-txt">
+                    <a routerLink="/our-work/paris-select" class="case-items" ngxSlickItem>
+                        <div class="card-h-txt desktop">
                             <h3 class="logo_card text">Paris Select</h3>
                             <div class="bottom_card">
                             <h4 class="card-heading">Paris Select</h4>
@@ -220,9 +238,15 @@
                             </div>
                         </div>
                         <img src="../../assets/image/portfolio/case/case-4.webp" width="100%" alt="case-4">
+                        <div class="card-h-txt mobile">
+                            <div class="bottom_card">
+                                <h4 class="card-heading">Paris Select</h4>
+                            <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
                     </a>   
-                    <a routerLink="/protech" class="case-items" ngxSlickItem>
-                        <div class="card-h-txt">
+                    <a routerLink="/our-work/protech" class="case-items" ngxSlickItem>
+                        <div class="card-h-txt desktop">
                             <img class="logo_card protech" src="../../assets/image/attachment-protech.png" width="100%" alt="">
                             <div class="bottom_card">
                             <h4 class="card-heading">Protech Monte-Carlo</h4>
@@ -230,9 +254,15 @@
                             </div>
                         </div>
                         <img src="../../assets/image/portfolio/case/case-5.webp" width="100%" alt="case-1"> 
+                        <div class="card-h-txt mobile">
+                            <div class="bottom_card">
+                                <h4 class="card-heading">Protech Monte-Carlo</h4>
+                            <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
                     </a>
-                    <a routerLink="/gripps" class="case-items" ngxSlickItem>
-                        <div class="card-h-txt">
+                    <a routerLink="/our-work/gripps" class="case-items" ngxSlickItem>
+                        <div class="card-h-txt desktop">
                             <h3 class="logo_card">GRIPPS</h3>
                             <div class="bottom_card">
                             <h4 class="card-heading">Gripps</h4>
@@ -240,9 +270,15 @@
                             </div>
                         </div>
                         <img src="../../assets/image/portfolio/case/case-6.webp" width="100%" alt="case-1">
+                        <div class="card-h-txt mobile">
+                            <div class="bottom_card">
+                                <h4 class="card-heading">Gripps</h4>
+                            <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
                     </a>
-                    <a routerLink="/fames-chocolates" class="case-items" ngxSlickItem>
-                        <div class="card-h-txt">
+                    <a routerLink="/our-work/fames-chocolates" class="case-items" ngxSlickItem>
+                        <div class="card-h-txt desktop">
                             <h3 class="logo_card">FAMESCHOCOLATES</h3>
                             <div class="bottom_card">
                             <h4 class="card-heading">Fameschocolates</h4>
@@ -250,9 +286,15 @@
                             </div>
                         </div>
                         <img src="../../assets/image/portfolio/case/case-7.webp" width="100%" alt="case-1">
+                        <div class="card-h-txt mobile">
+                            <div class="bottom_card">
+                                <h4 class="card-heading">Fameschocolates</h4>
+                            <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
                     </a>  
-                    <a routerLink="/egyptian" class="case-items" ngxSlickItem>
-                        <div class="card-h-txt">
+                    <a routerLink="/our-work/egyptian" class="case-items" ngxSlickItem>
+                        <div class="card-h-txt desktop">
                             <img class="logo_card egyptian" src="../../assets/image/attachment-egyptian.png" width="100%" alt="">
                             <div class="bottom_card">
                             <h4 class="card-heading">Egyptian queen beauty</h4>
@@ -260,9 +302,15 @@
                             </div>
                         </div>
                         <img src="../../assets/image/portfolio/case/case-8.webp" width="100%" alt="case-1">
+                        <div class="card-h-txt mobile">
+                            <div class="bottom_card">
+                                 <h4 class="card-heading">Egyptian queen beauty</h4>
+                                 <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
                     </a>
-                    <a routerLink="" class="case-items" ngxSlickItem>
-                        <div class="card-h-txt">
+                    <a routerLink="/our-work" class="case-items" ngxSlickItem>
+                        <div class="card-h-txt desktop">
                             <img class="logo_card mresi" src="../../assets/image/attachment-mersi.png" width="100%" alt="">
                             <div class="bottom_card">
                             <h4 class="card-heading">Mersi Distribution</h4>
@@ -270,6 +318,12 @@
                             </div>
                         </div>
                         <img src="../../assets/image/portfolio/case/case-9.webp" width="100%" alt="case-1">
+                        <div class="card-h-txt mobile">
+                            <div class="bottom_card">
+                                <h4 class="card-heading">Mersi Distribution</h4>
+                                <p class="card-txt">Shopify Plus Design & Build</p>
+                            </div>
+                        </div>
                     </a>
                 </ngx-slick-carousel>
             </div>
