--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -105,27 +105,43 @@ header.sticky {
 }
 .dropdown-wrap {
     position: absolute;
-    width: 600px;
+    width: 100%;
     background: linear-gradient(108deg, rgb(12, 55, 48) -100%, #000 99.21%);
     top: 88px;
-    left: -216px;
-    padding: 20px 60px 38px 60px;
+    left: 0;
+    padding: 0px;
     display: none;
     border-radius: 0px 0px 10px 10px;
-    border-top: 1px solid #37C8AE;
-    box-shadow: -6px 6px 10px 0px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 4px 6px 0px #00000040;
     z-index: 2;
 }
 .dropdown-wrap .drop-menu .drop-list {
-    padding: 5px 0px;
+    padding:0px;
+    border-right: 1px solid #37C8AE29;
     margin-right: 0;
+    box-shadow: 0 4px 20px #0000000d;
+    padding: 0px 57px 0px;
+    max-width: 267px;
+    min-height: 130px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 .dropdown-wrap .drop-menu .drop-list a {
-    color: #37C8AE;
-    font-size: 16px;
+    font-size: 20px;
     font-weight: 400;
-    line-height: 18px;
+    line-height: 25px;
     text-transform: capitalize;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    white-space: pre-wrap;
+    overflow-wrap: break-word;
+}
+.mega-side-right {
+    background: #37C8AE;
 }
 .dropdown-wrap .megamenu-container.flex {
     align-items: flex-start;
@@ -151,20 +167,42 @@ header.sticky {
     margin-top: 20px;
     margin-bottom: 25px;
 }
-.dropdown-wrap .megamenu-container .mega-side-right {
+/* .dropdown-wrap .megamenu-container .mega-side-right {
     max-width: 206px;
     width: 100%;
-}
+} */
 .dropdown-wrap .megamenu-container .mega-side-right .mega-heading {
-    color: #FFF;
-    font-family: var(--second-heading);
-    font-size: 16px;
+    color: #000;
+    font-family: var(--main-heading-font);
+    font-size: 20px;
     font-style: normal;
-    font-weight: 600;
-    line-height: 22px;
+    font-weight: 700;
+    line-height: 25px;
     text-transform: uppercase;
     margin-bottom: 10px;
-    margin-top: 7px;
+    margin: 0;
+}
+.mega_menu_heading {
+    width: 18.8%;
+    background-color: #37C8AE;
+    text-align: center;
+    padding: 33px 0 32px;
+}
+.drop-menu {
+    width: 81.2%;
+    background: linear-gradient(90.62deg, #010C16 0%, #0C3730 100%);
+}
+.menu-wrap .mega_menu_heading a {
+    color: #000 ;
+    padding-top: 15px;
+    display: inline-block;
+    font-weight: 400;
+    text-decoration: underline ;
+    font-family: var(--main-heading-font) ;
+    text-transform: capitalize ;
+}
+.mega_menu_heading a:hover{
+    color: #000 !important;
 }
 @media only screen and (max-width:991px) {
     header {
@@ -236,6 +274,7 @@ header.sticky {
     #menu .menu-ul-mobile .dm-service span,
     #menu .menu-ul-mobile .dm-service span svg {
         display: block;
+        cursor: pointer;
     }
     #menu .menu-ul-mobile .dm-service .tab-heading.on svg {
         rotate: 180deg;
