blog search filter

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -16,7 +16,7 @@
                 <div class="footer-menu">
                     <ul class="menu-wrap flex">
                         <li class="menu-list">
-                            <a routerLinkActive="active" routerLink="/about">About us</a>
+                            <a routerLinkActive="active" routerLink="/about">About</a>
                         </li>
                         <li class="menu-list">
                             <a routerLinkActive="active" routerLink="/our-team">Our Team</a>
@@ -114,7 +114,7 @@
         <div class="footer_mobile_menu_wrap mobile">
             <ul class="footer-mobile-menu">
                 <li class="mobile-list">
-                    <a routerLinkActive="active" routerLink="/about">About us</a>
+                    <a routerLinkActive="active" routerLink="/about">About</a>
                 </li>
                 <li class="mobile-list">
                     <a routerLinkActive="active" routerLink="/our-team">Our team</a>
@@ -138,7 +138,7 @@
         <div class="mobile_copy_text mobile">
             <p>© Codesdesk Technology Pvt. Ltd. 2022 | All Rights Reserved.</p>
         </div>
-       <div class="popup-cookies">
+       <!-- <div class="popup-cookies">
         <div class="cookie-overlay-back">
             <div class="cookies-pop-up">
                 <div class="cookie-top"></div>
@@ -158,6 +158,6 @@
                 </div>
             </div>
         </div>
-       </div>
+       </div> -->
     </div>
 </footer>
