--- a/src/app/blog-list/blog-list.component.css
+++ b/src/app/blog-list/blog-list.component.css
@@ -1,11 +1,75 @@
+.blog-tab-section .container {
+    padding: 0 30px;
+}
+.blog-tab-section .blog-tab-main {
+    padding: 110px 130px 62px;
+    text-align: center;
+}
+.blog-tab-section .blog-tab-main .tab-sec-heading {
+    font-size: 40px;
+    line-height: 55px;
+    font-weight: 700;
+    font-family: var(--main-heading-font);
+    max-width: 743px;
+    margin: 0 auto;
+    margin-bottom: 15px;
+}
+.blog-tab-section .blog-tab-main .primery-text {
+    font-family: var(--second-heading);
+    max-width: 818px;
+    margin: 0 auto;
+    margin-bottom: 36px;
+}
+.blog-tab-section .blog-tab-main .blog-search #myInput {
+    width: 674px;
+    height: 55px;
+    border: none;
+    border-radius: 10px 0 0 10px;
+    background: #D9D9D9;
+    padding: 18px 25px;
+    outline: none;
+}
+.blog-tab-section .blog-tab-main .blog-search .search-input-btn {
+    border: none;
+    outline: none;
+    background: #37c8ae;
+    height: 55px;
+    width: 70px;
+    border-radius: 0 10px 10px 0;
+}
+.blog-tab-section .blog-tab-main .blog-search {
+    margin-bottom: 60px;
+}
 .blogs-section {
-    padding: 100px 0 200px;
+    padding: 50px 0 200px;
 }
 .blogs-section .our_work_all_wrap .blog_cards_wrapper {
    row-gap: 50px;
 }
 .blogs-section .our_work_all_wrap .service-head .service-text p {
     padding-right: 20px;
+}
+.blog-filter-tab .filter-tab-wrap.flex-center {
+    column-gap: 20px;
+}
+.blog-filter-tab .filter-tab-wrap .filter-tab-list {
+    list-style: none;
+    width: 170px;
+    height: 50px;
+    border: 1px solid #37C8AE;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.blog-filter-tab .filter-tab-wrap .filter-tab-list a {
+    text-decoration: none;
+    font-size: 20px;
+    line-height: 23.7px;
+    font-weight: 500;
+    font-family: var(--second-heading);
+    color: #37C8AE;
+    text-transform: capitalize;
 }
 @media only screen and (max-width:767px) {
     .blogs-section {
