--- a/src/app/blog-list/blog-list.component.html
+++ b/src/app/blog-list/blog-list.component.html
@@ -1,3 +1,46 @@
+<section class="blog-tab-section">
+    <div class="container">
+       <div class="blog-tab-main">
+            <h2 class="tab-sec-heading">
+                Elevate Your E-Commerce: Insights and Strategies from Our Shopify Plus Experts
+            </h2>
+            <p class="primery-text">
+                Welcome to our Shopify Plus agency blog, your ultimate destination for e-commerce excellence. Dive into a wealth of industry-leading insights, expert tips, and cutting-edge strategies curated by our team of Shopify Plus specialists. Whether you're a seasoned entrepreneur or just starting your online business journey, our blog is your go-to resource for unlocking the full potential of Shopify Plus. Join us as we explore the latest trends, share success stories, and empower you to take your e-commerce game to the next level.
+            </p>
+            <form class="blog-search flex-center">
+                <input type="search" id="myInput" placeholder="Search....." name="search">
+                <button class="search-input-btn"><svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12.5998 2.3999C6.64915 2.3999 1.7998 7.24925 1.7998 13.1999C1.7998 19.1506 6.64915 23.9999 12.5998 23.9999C14.7729 23.9999 16.7952 23.3483 18.492 22.2374L26.0271 29.7726L28.5725 27.2272L21.1346 19.7894C22.5487 17.9629 23.3998 15.6807 23.3998 13.1999C23.3998 7.24925 18.5505 2.3999 12.5998 2.3999ZM12.5998 4.7999C17.2535 4.7999 20.9998 8.54616 20.9998 13.1999C20.9998 17.8536 17.2535 21.5999 12.5998 21.5999C7.94606 21.5999 4.1998 17.8536 4.1998 13.1999C4.1998 8.54616 7.94606 4.7999 12.5998 4.7999Z" fill="white"/>
+                    </svg>
+                </button>
+            </form>
+            <div class="no-records " style="display: none; ">
+                <p>No record found.</p>
+            </div>
+            <div class="blog-filter-tab">
+                <ul class="filter-tab-wrap flex-center">
+                    <li class="filter-tab-list">
+                        <a href="">all</a>
+                    </li>
+                    <li class="filter-tab-list">
+                        <a href="">Shopify Apps</a>
+                    </li>
+                    <li class="filter-tab-list">
+                        <a href="">shopify</a>
+                    </li>
+                    <li class="filter-tab-list">
+                        <a href="">ux/ui</a>
+                    </li> <li class="filter-tab-list">
+                        <a href="">e-commerce</a>
+                    </li>
+                    <li class="filter-tab-list">
+                        <a href="">seo</a>
+                    </li>
+                </ul>
+            </div>
+       </div>
+    </div>
+</section>
 <section class="blogs-section">
     <div class="container">
         <div class="our_work_all_wrap">
