--- a/src/app/our-team/our-team.component.html
+++ b/src/app/our-team/our-team.component.html
@@ -98,12 +98,12 @@
                         <div class="front">
                             <img src="../../assets/image/team-member/amit.webp" width="100%" alt="amit">
                             <div class="card-member-detail">
-                                <h4 class="member-name">Anit Kumar Singh</h4>
+                                <h4 class="member-name">Amit Kumar Singh</h4>
                                 <p class="designation">Web & graphic designer</p>
                             </div>
                         </div>
                         <div class="back">
-                            <h4 class="member-name">Anit Kumar Singh</h4>
+                            <h4 class="member-name">Amit Kumar Singh</h4>
                             <p class="designation-back">Web & graphic designer</p>
                             <p class="discription-member">
                                 Amit Kumar Singh, a versatile Web & Graphic Designer, stands out for his unique blend of creativity and technical expertise. With an eye for detail and a passion for innovative design, Amit consistently delivers visually striking and user-centric solutions.
